<resources>
    <string name="app_name">Survey App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="iniciarEncuesta">Iniciar \nEncuesta</string>
    <string name="agregarPregunta">Agregar Pregunta</string>
    <string name="ingresarPregunta">Ingrese su pregunta</string>
    <string name="pregunta1">¿Tiene algún comentario o sugerencia?</string>
    <string name="ingresarRespuesta">Ingrese su respuesta</string>
    <string name="siguiente">SIGUIENTE</string>
    <string name="pregunta2">¿Qué le pareció nuestro servicio?</string>
    <string name="resultados">Resultados</string>
    <string name="rating">Rating:</string>
    <string name="encuestas">Encuestas:</string>
    <string name="encuestas">Encuestas:</string>
    <string name="nuevaEncuesta">Nueva Encuesta</string>
    <string name="verRespuestas">Ver Respuestas</string>
    <string name="surveyApp">Survey App</string>
    <string name="acercade">Es un app para realizar encuestas \ny así obtener las opiniones de los usuarios
    \ny poder mejorar nuestros servicios para satisfacer \nmejor a nuestros clientes.</string>
</resources>
